c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/lh_compound_assignment.c
int main(void) {
    int x = 10;
    (x -= 1) ? (x /= 2) : 0;
    return x == 4;
}