c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/wrong_ternary_delimiter.c
int main(void) {

    int x = 10;
    // make sure second delimiter in ternary expression is :
    return x ? 1 = 2;
}